# RAGnaRock

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE.pt-BR.md  CLAUDE.md  JSONCONTRACT.md  JSONCONTRACT.pt-BR.md  LICENSE.md  README.md  README.pt-BR.md  ragnarock.cfg.example
drivers/: tokens_ASPClassic_PTBR.drv  tokens_ASPRazor_PTBR.drv  tokens_ASPWebForms_PTBR.drv  tokens_CSS_PTBR.drv  tokens_CSharp_PTBR.drv  tokens_C_PTBR.drv  tokens_Clipper_PTBR.drv  tokens_Cobol_PTBR.drv  tokens_Cpp_PTBR.drv  tokens_Delphi_PTBR.drv  tokens_Go_PTBR.drv  tokens_HTML_PTBR.drv  tokens_JSON_PTBR.drv  tokens_JavaScript_PTBR.drv  tokens_Java_PTBR.drv  tokens_Kotlin_PTBR.drv  tokens_Mumps_PTBR.drv  tokens_PHP_PTBR.drv  tokens_PTBR.drv  tokens_Pascal_PTBR.drv  tokens_Perl_PTBR.drv  tokens_Python_PTBR.drv  tokens_Ruby_PTBR.drv  tokens_Rust_PTBR.drv  tokens_SQL_PTBR.drv  tokens_Shell_PTBR.drv  tokens_SourceCode_PTBR.drv  tokens_Swift_PTBR.drv  tokens_TOML_PTBR.drv  tokens_TypeScript_PTBR.drv  tokens_VBNet_PTBR.drv  tokens_XML_PTBR.drv  (+1 more)
nidhoggd/: Cargo.toml
nidhoggd/src/: main.rs
ragd/: Cargo.toml  README.md
ragd/json_samples/: README.md  chunk.json  chunk_ids.json  chunk_response.example.json  drivers_response.example.json  ingest_by_data.json  ingest_by_path.json  ingest_file_auto.json  ingest_file_full.json  ingest_raw.json  ingest_upload_multipart_response.example.json  ingest_upload_raw_response.example.json  interpret_fallback.example.json  interpret_match.example.json  search.json  search_minimal.json  search_no_rerank.json  search_phonetic.json  search_response.example.json  search_wildcard.json
ragd/src/: chunk.rs  dashboard.html  index.rs  ingestor.rs  lib.rs  main.rs  multipart.rs  rag.rs  tokenizer.rs  vector.rs  vocab.rs
rust_concept/: Cargo.toml  README.md
rust_concept/src/: lib.rs  vector.rs  vocab.rs
tools/: bench.py  (+4 more)
(+34 files in other folders)
