[package]
name = "ragd"
version = "0.1.0"
edition = "2021"
description = "RAGnaRock daemon — segura N bases RAG em memoria; busca/ingest via HTTP JSON"

[dependencies]
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
tiny_http = "0.12"
rayon = "1"

[profile.release]
opt-level = 3
